--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "file:gsap-bonus.tgz",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
