--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "gsap": "file:gsap-bonus.tgz",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vue-scrollmagic": "^1.2.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.1.2",
